# sgl-mindspore-wtc

./: .pre-commit-config.yaml  README.md  README_zh.md  pyproject.toml
examples/: bench_one_batch.sh  bench_serving.sh  offline_infer.py  server_infer.py  start_server.sh
sgl_mindspore/layers/: activation.py  linear.py
sgl_mindspore/layers/moe/: fused_moe.py
sgl_mindspore/models/: deepseekv3.py  qwen3.py  qwen3_eagle3.py  qwen3_moe.py
