[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgl-mindspore"
version = "0.0.1"
description = "A Python package for SGLang with MindSpore"
readme = "README.md"
authors = [
  { name = "chz34", email = "c-34@qq.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "sglang",
    "mindspore @ http://repo.mindspore.cn/mindspore/mindspore/version/202512/20251211/master_20251211010018_65a9c09590c14021cbe38cb8720acb5dad022901_newest/unified/aarch64/mindspore-2.7.1-cp311-cp311-linux_aarch64.whl",
    "torch==2.8.0",
    "torch_npu==2.8.0",
    "torchvision",
    "triton-ascend",
    "pybind11",
]
